@@ -15,7 +15,7 @@
 \newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
 \newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}
 
-\section{Changes in CHNOSZ version 2.1.0-19 (2024-11-08)}{
+\section{Changes in CHNOSZ version 2.1.0-20 (2024-11-17)}{
 
     \itemize{
 
@@ -51,6 +51,10 @@
       \item OBIGT: Restore steam (H\s{2}O,g) in \file{inorganic_gas.csv}.
 
       \item OBIGT: Fix sign of \emph{c} parameter for nesquehonite. Thanks to James Leong and Grayson Boyer.
+
+      \item Add \file{demo/uranium.R}, total (carbonate|sulfate)-pH diagrams
+      for uranium, after
+      \href{https://doi.org/10.1016/j.gca.2024.04.023}{Migdisov et al. (2024)}.
 
     }
 
